本地录制上传wav文件成功

--- a/src/flaskWeb/templates/index.html
+++ b/src/flaskWeb/templates/index.html
@@ -47,8 +47,7 @@
             // 绑定开始录音按钮
             const recordStartBtn = document.querySelector(".record-start-btn");
             // 绑定结束录音按钮
-            const recordFinishBtn =
-              document.querySelector(".record-finish-btn");
+            const recordFinishBtn = document.querySelector(".record-finish-btn");
             // 创建MediaRecorder空对象
             const mediaRecorder = new MediaRecorder(stream);
             var chunks = [];
